<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:background="@color/colorWhite"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <ImageView
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:src="@drawable/icon"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/file_transfer_app"
        android:textColor="@color/colorPrimary"
        android:textSize="30sp"
        android:layout_margin="20dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:textSize="12sp"
        android:text="@string/please_enter_the_ip_address_and_port_nshown_in_pc_server_agent"/>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/host_ip"
            android:layout_gravity="center"
            android:textSize="20sp"/>
        <EditText
            android:id="@+id/txtIP"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:minWidth="170dp"
            android:gravity="center"
            android:layout_margin="5dp"
            android:text=""
            android:inputType="numberDecimal"
            android:digits="0123456789."/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/port"
            android:layout_gravity="center"
            android:textSize="20sp"/>

        <EditText
            android:id="@+id/txtPort"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:minWidth="80dp"
            android:layout_gravity="center"
            android:gravity="center"
            android:textSize="20sp"
            android:text=""
            android:inputType="numberDecimal"
            android:digits="0123456789"/>
    </LinearLayout>

    <Button
        android:id="@+id/btnConnect"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/button_bg"
        android:textColor="@color/colorWhite"
        android:layout_marginTop="30dp"
        android:text="@string/connect"/>

</LinearLayout>