<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/constraintLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#fff"
    android:orientation="horizontal">


    <ImageView
        android:id="@+id/fileIcon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginStart="16dp"
        android:src="@drawable/folder" />

    <TextView
        android:id="@+id/fileName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ellipsize="end"
        app:layout_constraintStart_toEndOf="@id/fileIcon"
        android:layout_marginStart="8dp"
        android:maxLines="1"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toTopOf="parent"
        android:text="@string/file_name"
        android:textColor="#000"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/fileSize"
        android:layout_width="wrap_content"
        app:layout_constraintStart_toEndOf="@id/fileIcon"
        android:layout_marginStart="8dp"
        android:layout_marginTop="4dp"
        app:layout_constraintTop_toBottomOf="@id/fileName"
        android:layout_height="wrap_content"
        android:text="@string/file_size" />

    <TextView
        android:id="@+id/filePath"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toEndOf="@id/fileIcon"
        android:layout_marginStart="8dp"
        android:layout_marginTop="4dp"
        app:layout_constraintTop_toBottomOf="@id/fileSize"
        android:ellipsize="end"
        android:maxLines="1"
        android:text="@string/filepath" />

</androidx.constraintlayout.widget.ConstraintLayout>